--- a/gitops-install/desired-namespaces.yml
+++ b/gitops-install/desired-namespaces.yml
@@ -4,6 +4,8 @@ namespaces:
 #! The only required parameter is the name of the namespace. All additional values provided here
 #! for a namespace will be available under data.values for templating additional sources
 - name: dev
+  scanpolicies: ["grype-scan-policy", "snyk-scan-policy", "trivy-scan-policy", "carbonblack-scan-policy"]
+  pipelines: ["java-maven-test-pipeline2", "dotnet-test-pipeline"]
 - name: test
-- name: qa
-- name: beta
+  scanpolicies: ["snyk-scan-policy"]
+  pipelines: ["java-maven-test-pipeline2", "dotnet-test-pipeline", "golang-test-pipeline", "node-test-pipeline"]
