Import cbc and snyk secrets from tap-install ns

--- a/gitops-install/secret-import.yml
+++ b/gitops-install/secret-import.yml
@@ -9,7 +9,7 @@ metadata:
   name: snyk-token-secret
   namespace: #@ ns.name
 spec:
-  fromNamespace: tanzu-system-ingress
+  fromNamespace: tap-install
 #@ end
 ---
 #@ for ns in data.values.namespaces:
@@ -19,5 +19,5 @@ metadata:
   name: carbonblack-token-secret
   namespace: #@ ns.name
 spec:
-  fromNamespace: tanzu-system-ingress
+  fromNamespace: tap-install
 #@ end
