--- a/gitops-install/desired-namespaces.yml
+++ b/gitops-install/desired-namespaces.yml
@@ -5,7 +5,7 @@ namespaces:
 #! for a namespace will be available under data.values for templating additional sources
 - name: dev
   pipelines: ["java", "java17"]
-  scanpolicies: ["grype-scan-policy"]
+  scanpolicies: ["lax-scan-policy"]
 - name: test
   pipelines: ["java", "java17", "dotnet", "node"]
   scanpolicies: ["carbonblack-scan-policy", "snyk-scan-policy"]
