Update create strategy for service account

--- a/gitops-install/default-service-account.yml
+++ b/gitops-install/default-service-account.yml
@@ -10,7 +10,7 @@ metadata:
   name: default
   namespace: #@ ns.name
   annotations:
-    kapp.k14s.io/create-strategy: fallback-on-update
+    kapp.k14s.io/create-strategy: always-replace
 secrets:
   - name: registry-credentials
   - name: git-ssh
