secret import for git-ssh across ns provisioned namespaces

--- a/gitops-install/registry-credential.yml
+++ b/gitops-install/registry-credential.yml
@@ -11,4 +11,12 @@ metadata:
   namespace: #@ ns.name
 spec:
   fromNamespace: tap-install
+---
+apiVersion: secretgen.carvel.dev/v1alpha1
+kind: SecretImport
+metadata:
+  name: git-ssh
+  namespace: # @ns.name
+spec:
+  fromNamespace: tap-install
 #@ end
