--- a/gitops-install/registry-credential.yml
+++ b/gitops-install/registry-credential.yml
@@ -11,7 +11,9 @@ metadata:
   namespace: #@ ns.name
 spec:
   fromNamespace: tap-install
+#@ end
 ---
+#@ for ns in data.values.namespaces:
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
